--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 ‏<font face="Consolas" size="2" color="#FF0000">
 
-‏<noindex><a href="https://xif66x.github.io/" rel="nofollow" target="_blank" title=",,">
+‏<noindex><a href="href="cydia://url/https://xif66x.github.io/" rel="nofollow" target="_blank" title=",,">
 
 ‏<font color="#FFFFFF">Add repo</font></a></noindex></font></span></p>
 
