--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 ‏<html dir="rtl"><head>
 
-‏</head><body bgcolor="#edc3c0"><m-eta http-equiv="Content-Language" content="en-us">
+‏</head><body bgcolor="#b38529"><m-eta http-equiv="Content-Language" content="en-us">
 
         * <m-eta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
@@ -51,7 +51,7 @@
 
 ‏<p dir="ltr" align="center">
 
-‏<img border="0" src="https://64.media.tumblr.com/9f03d0d78268a6912b677f32dfa4d3df/a76afb0fbd13a16c-f4/s500x750/499bafb77167be06c8c99c4b63419f4bbc2473e4.jpg" width="420" height="400"></p>
+‏<img border="0" src="https://www.tumblr.com/wooserr/763338737382047744/its-the-season-again?source=share" width="420" height="400"></p>
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="4">مرحباً,
 
@@ -112,12 +112,11 @@
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="5">
 
-‏<font color="#FFFFFF"><span style="background-color: #990002">&gt;</span></font><font color="#5E2E21"> </font></font><b><font face="Consolas" size="5">عش سعيداً</font></b><span style="font-weight: 400"><b><font face="Consolas" size="5"> 
+‏<font color="#FFFFFF"><span style="background-color: #990002">&gt;</span></font><font color="#5E2E21"> </font></font><b><font face="Consolas" size="5">be happy☻⃤</font></b><span style="font-weight: 400"><b><font face="Consolas" size="5"> 
 
 ‏.</font></b></span></p>
 
-‏<embed src="https://www.youtube.com/v/pbr70IT2uOU&amp;autoplay=1&amp;" type="application/x-shockwave-flash" wmode="transparent" height="0" width="0">
-
+‏
 
 
 
