--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 ‏	<font color="#FFFFFF">
 
-‏	<span style="background-color: #990002">Made By Yousef</span></font><font color="#5E2E21">
+‏	<span style="background-color: #57544d">Made By Yousef</span></font><font color="#5E2E21">
 
 ‏	</font>
 
@@ -51,19 +51,19 @@
 
 ‏<p dir="ltr" align="center">
 
-‏<img border="0" src="https://www.tumblr.com/wooserr/763338737382047744/its-the-season-again?source=share" width="420" height="400"></p>
+‏<img border="0" src="https://64.media.tumblr.com/2e4cb9eb23d8f3815bbe9650d14f6d50/278ac005fe7576df-4a/s540x810/ea16224605addf3ca4607394d79fd82f74ce5643.gifv" width="420" height="400"></p>
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="4">مرحباً,
 
-‏<span style="background-color: #990002"><font color="#FFFFFF">Hello</font></span></font></p>
+‏<span style="background-color: #57544d"><font color="#FFFFFF">Hello</font></span></font></p>
 
 ‏<p dir="ltr" align="center"><font size="2" face="Consolas">All This Was Made,
 
-‏<span style="background-color: #990002"><font color="#FFFFFF">بِحُب.</font></span></font></p>
+‏<span style="background-color: #57544d"><font color="#FFFFFF">بِحُب.</font></span></font></p>
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="4" color="#5E2E21">&nbsp;</font><font face="Consolas" size="4">اخبرني,</font><font face="Consolas" size="4" color="#5E2E21">
 
-‏</font><span style="background-color: #990002">
+‏</font><span style="background-color: #57544d">
 
 ‏<font face="Consolas" size="4" color="#FFFFFF">
 
@@ -79,7 +79,7 @@
 
 ‏<font color="#FFFFFF"><a href="https://www.instagram.com/xif66x">
 
-‏<span style="background-color: #990002">
+‏<span style="background-color: #57544d">
 
 ‏<font color="#FFFFFF">@xif66x</font></span></a></font></font><span style="font-weight: 400"><font face="Consolas" size="2"><b><span lang="ar-sa" style="background-color: #FFFFFF"> </span><span lang="ar-sa">- </span>twitter :</b></font></span><span style="font-weight: 400"><b><font face="Consolas" size="2"><span style="text-decoration: none"> </span></font></b></span>
 
@@ -90,14 +90,14 @@
 
 ‏<font color="#FFFFFF" face="Consolas" size="2"><a href="https://mobile.twitter.com/alfaylasoof95">
 
-‏<span style="background-color: #990002">
+‏<span style="background-color: #57544d">
 
 ‏<font color="#FFFFFF">@alfaylasoof95</font></span></a></font></span><span style="font-weight: 400"><b><font face="Consolas" size="2"><span style="text-decoration: none"> </span></font></b></span>
 
 ‏<font face="Consolas" size="2"><span lang="ar-sa">-</span> </font>
 
 
-‏<span style="background-color: #990002; font-weight:700">
+‏<span style="background-color: #57544d"; font-weight:700">
 
 ‏<font face="Consolas" size="2" color="#FF0000">
 
