--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 
 ‏<p dir="ltr" align="center"><font size="2" face="Consolas">All This Was Made,
 
-‏<span style="background-color: #57544d"><font color="#FFFFFF">بِحُب.</font></span></font></p>
+‏<span style="background-color: #57544d"><font color="#FFFFFF">with love.</font></span></font></p>
 
-‏<p dir="ltr" align="center"><font face="Consolas" size="4" color="#5E2E21">&nbsp;</font><font face="Consolas" size="4">اخبرني,</font><font face="Consolas" size="4" color="#5E2E21">
+‏<p dir="ltr" align="center"><font face="Consolas" size="4" color="#5E2E21">&nbsp;</font><font face="Consolas" size="4">text</font><font face="Consolas" size="4" color="#5E2E21">
 
 ‏</font><span style="background-color: #57544d">
 
 ‏<font face="Consolas" size="4" color="#FFFFFF">
 
-‏عن ما في قلبك .</font></span></p><span style="font-weight: 400">
+text</font></span></p><span style="font-weight: 400">
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="2">
 
@@ -101,7 +101,7 @@
 
 ‏<font face="Consolas" size="2" color="#FF0000">
 
-‏<noindex><a href="href="cydia://url/https://xif66x.github.io/" rel="nofollow" target="_blank" title=",,">
+‏<noindex><a href="href=cydia://url/https://xif66x.github.io/" rel="nofollow" target="_blank" title=",,">
 
 ‏<font color="#FFFFFF">Add repo</font></a></noindex></font></span></p>
 
