--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
 ‏<span style="background-color: #57544d"><font color="#FFFFFF">with love.</font></span></font></p>
 
-‏<p dir="ltr" align="center"><font face="Consolas" size="4" color="#5E2E21">&nbsp;</font><font face="Consolas" size="4">text</font><font face="Consolas" size="4" color="#5E2E21">
+‏<p dir="ltr" align="center"><font face="Consolas" size="4" color="#5E2E21">&nbsp;</font><font face="Consolas" size="4">قد تنظر لما أنظر</font><font face="Consolas" size="4" color="#5E2E21">
 
 ‏</font><span style="background-color: #57544d">
 
 ‏<font face="Consolas" size="4" color="#FFFFFF">
 
-text</font></span></p><span style="font-weight: 400">
+، ولكنك لا ترى ما أرى</font></span></p><span style="font-weight: 400">
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="2">
 
@@ -101,7 +101,7 @@ text</font></span></p><span style="font-weight: 400">
 
 ‏<font face="Consolas" size="2" color="#FF0000">
 
-‏<noindex><a href="href=cydia://url/https://xif66x.github.io/" rel="nofollow" target="_blank" title=",,">
+‏<noindex><a href="cydia://url/https://xif66x.github.io/" rel="nofollow" target="_blank" title=",,">
 
 ‏<font color="#FFFFFF">Add repo</font></a></noindex></font></span></p>
 
@@ -112,7 +112,7 @@ text</font></span></p><span style="font-weight: 400">
 
 ‏<p dir="ltr" align="center"><font face="Consolas" size="5">
 
-‏<font color="#FFFFFF"><span style="background-color: #990002">&gt;</span></font><font color="#5E2E21"> </font></font><b><font face="Consolas" size="5">be happy☻⃤</font></b><span style="font-weight: 400"><b><font face="Consolas" size="5"> 
+‏<font color="#FFFFFF"><span style="background-color: #990002">&gt;</span></font><font color="#5E2E21"> </font></font><b><font face="Consolas" size="5">لا قيمة لأراء الناس مادامت أفعالك تمنحك ضميراً مريحاً</font></b><span style="font-weight: 400"><b><font face="Consolas" size="5"> 
 
 ‏.</font></b></span></p>
 
